--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-dark:  255, 255, 255; 
-    --color-light: 10, 10, 20;
+    --color-dark:  #333, #333, #333; 
+    --color-light: #FFF, #FFF, #FFF;
   }
 }
 
